--- a/Style.css
+++ b/Style.css
@@ -15,24 +15,42 @@
     padding: 0;
     box-sizing: border-box;
 }
-body{
+Body{
     /* background-image: url(Recursos__img/cool-background.png); */
     /* background-image: url(Recursos__img/cool-background\ \(2\).png); */
     background-image: url(Recursos__img/cool-background\ \(3\).png);
-    background-size: cover;
+    background-image: none;
+    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 }
 
-.Content__Title{
+.Content__Title{   
     font-family: "Courgette", cursive;
     font-weight: 400;
-    font-style: small;
-    margin: 20px;
+    font-style: normal;
+    align-items: center;
+    text-transform: uppercase;
+    margin: 20px 10px 0px 30px;
 }
-
-
+.Content__Titlesub{
+    font-family: "Courgette", cursive;
+    font-weight: 400;
+    font-style: normal;
+    margin-bottom:10px ;
+}
+.Content__List{
+    margin: 30px;
+}
 .Content_Links{
-    display: block;
+    display: inline-flex;
+    flex-direction: column;
     padding: 10px;
     margin: 10px;
     background-color: rgb(206, 218, 245);
+    border-radius: 20px;
+
+}
+
+.Listado_List{
+    text-decoration: none;
+    color: black;
 }
