--- a/Style.css
+++ b/Style.css
@@ -10,6 +10,13 @@
     font-weight: 400;
     font-style: normal;
 }
+@import url('https://fonts.googleapis.com/css2?family=Courgette&family=IM+Fell+French+Canon+SC&family=Protest+Revolution&display=swap');
+.protest-revolution-regular {
+    font-family: "Protest Revolution", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -18,9 +25,11 @@
 Body{
     /* background-image: url(Recursos__img/cool-background.png); */
     /* background-image: url(Recursos__img/cool-background\ \(2\).png); */
-    background-image: url(Recursos__img/cool-background\ \(3\).png);
-    background-image: none;
-    background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+    /* background-image: url(Recursos__img/cool-background\ \(3\).png);
+    background-image: none; */
+    /* background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%); */
+    /* background: radial-gradient(circle, rgba(96,254,225,1) 0%, rgba(159,232,186,1) 53%, rgba(128,252,53,1) 100%); */
+    height: 100vh;
 }
 
 .Content__Title{   
@@ -30,27 +39,56 @@ Body{
     align-items: center;
     text-transform: uppercase;
     margin: 20px 10px 0px 30px;
+    text-align: center;
 }
 .Content__Titlesub{
     font-family: "Courgette", cursive;
     font-weight: 400;
     font-style: normal;
     margin-bottom:10px ;
+    text-align: center;
 }
 .Content__List{
-    margin: 30px;
+    margin: 20px;
 }
 .Content_Links{
     display: inline-flex;
     flex-direction: column;
     padding: 10px;
-    margin: 10px;
+    text-align: center;
+    margin: 20px;
+    /* margin-lef: 10px; */
     background-color: rgb(206, 218, 245);
     border-radius: 20px;
-
 }
 
 .Listado_List{
     text-decoration: none;
     color: black;
+    font-family: "Protest Revolution", sans-serif;
+    /* font-weight: 400;
+    font-style: normal; */
+}
+.Content__Logo{
+    /* position: absolute; */
+    width: 100px;
+    height: 100px;
+    z-index: -1;
+    /* margin-left:10px ;
+    margin-right: 20px; */
+}
+
+.Content__Logo-Sena{
+    width: 100%;
+    height: 100%;
+}
+
+.Content__Logo-text{
+    font-family: "Courgette", cursive;
+    font-weight: 400;
+    font-style: normal;
+    position: relative;
+    flex-direction: column;
+    margin-left:6px;
+    text-align: center;
 }
